# til

./: .gitignore  Dockerfile  LICENSE  README.md  create_db.py  metadata.yaml  pyproject.toml
posts/: article1.md  article2.md  article3.md  cmdstanwithgpu.md  dplyr.md  hdrinmultinorm.md  histogramgroupfrequency.md  jpndistrictsetup.md  readmanyfiles.md
static-files/: style.css
templates/: index.html  til_base.html
templates/pages/: posts.html  {tag}.html
templates/pages/posts/: {slug}.html
